Implement most endpoints and db
Also commit correct webui and run script
