# doc/api.yaml
@@ -6,8 +6,6 @@ info:
 
     You can upload your photos directly from your PC, and they will be visible to everyone following you.
   version: 1.0.0
-servers:
-  - url: http://localhost:3000
 
 components:
   schemas:
@@ -36,40 +34,24 @@ components:
       description: This object represents the profile data of a user
       type: object
       properties:
-        photos:
-          type: array
-          description: The list of photos this user uploaded
-          items: { $ref: '#/components/schemas/Photo/properties/photoId' }
-          uniqueItems: true
-          minItems: 0
-          maxItems: 99999
+        userId: { $ref: '#/components/schemas/User/properties/userId' }
+        username: { $ref: '#/components/schemas/User/properties/username' }
         photoCount:
           description: The count of how many photos this user uploaded
           type: integer
           example: 42
           minimum: 0
-        followers:
-          description: The list of users following this user
-          type: array
-          items: { $ref: '#/components/schemas/User/properties/userId' }
-          uniqueItems: true
-          minItems: 0
-          maxItems: 99999
-        following:
-          description: The list of users followed by this user
-          type: array
-          items: { $ref: '#/components/schemas/User/properties/userId' }
-          uniqueItems: true
-          minItems: 0
-          maxItems: 99999
-        banList:
-          description: The list of users banned by this user
-          type: array
-          items: { $ref: '#/components/schemas/User/properties/userId' }
-          uniqueItems: true
-          minItems: 0
-          maxItems: 99999
-      required: [ "photos", "photoCount", "followers", "following", "banList" ]
+        followersCount:
+          description: The amount of users following this user
+          type: integer
+          example: 42
+          minimum: 0
+        followingCount:
+          description: The amount of users followed by this user
+          type: integer
+          example: 42
+          minimum: 0
+      required: [ "userId", "username", "photoCount", "followersCount", "followingCount" ]
 
     Comment:
       title: Comment
@@ -132,11 +114,7 @@ components:
           description: Number of comments for the image
           example: 42
           minimum: 0
-        likeStatus:
-          description: Indicates whether the requesting user has liked the image.
-          type: boolean
-          example: true
-      required: [ "photoId", "owner", "image", "uploadTime", "likeCount", "commentsCount", "likeStatus" ]
+      required: [ "photoId", "owner", "image", "uploadTime", "likeCount", "commentsCount" ]
 
     Error:
       title: Error
@@ -155,23 +133,23 @@ components:
       required: [ "code", "message" ]
 
   parameters:
-    userIdParam:
-      name: userId
+    usernameParam:
+      name: username
       in: path
-      description: ID of the user
+      description: Username of the user
       required: true
       content:
         application/json:
-          schema: { $ref: '#/components/schemas/User/properties/userId' }
+          schema: { $ref: '#/components/schemas/User/properties/username' }
 
-    targetUserIdParam:
-      name: targetUserId
+    targetUsernameParam:
+      name: targetUsername
       in: path
-      description: ID of the target
+      description: Username of the target
       required: true
       content:
         application/json:
-          schema: { $ref: '#/components/schemas/User/properties/userId' }
+          schema: { $ref: '#/components/schemas/User/properties/username' }
 
     photoIdParam:
       name: photoId
@@ -279,7 +257,7 @@ paths:
                   pattern: '^.*?$'
                   minLength: 3
                   maxLength: 16
-      responses:
+      responses: # TODO: return the auth token along with the userId, so that they can be stored in localStorage
         "201":
           description: User log-in action successful
           content:
@@ -297,16 +275,15 @@ paths:
                     maxLength: 16
       security: [ ]
 
-  /users/{userId}:
+  /users/{username}:
     parameters:
-      - $ref: '#/components/parameters/userIdParam'
+      - $ref: '#/components/parameters/usernameParam'
     put:
       tags: [ "User" ]
       operationId: setMyUserName
       summary: Change your username
       description: |-
-        Given a user's id, update the username.
-        If the ID is not in use, return an error string.
+        Given a user's username, update said username.
       requestBody:
         description: The new username to set
         required: true
@@ -316,7 +293,7 @@ paths:
               type: object
               description: username schema
               properties:
-                newUsername: { $ref: '#/components/schemas/User/properties/username' }
+                username: { $ref: '#/components/schemas/User/properties/username' }
       responses:
         "201":
           description: Username changed successfully
@@ -328,29 +305,28 @@ paths:
         "404": { $ref: '#/components/responses/NotFound' }
         "500": { $ref: '#/components/responses/InternalServerError' }
 
-  /users/{userId}/profile:
+  /users/{username}/profile:
     parameters:
-      - $ref: '#/components/parameters/userIdParam'
+      - $ref: '#/components/parameters/usernameParam'
     get:
       tags: [ "User" ]
       operationId: getUserProfile
       summary: Retrieve the information of a user
       description: |-
-        Given a user's id, retrieve all the public info available.
-        If the ID is not in use, return an error string.
+        Given a user's username, retrieve all the public info available.
       responses:
         "200":
           description: Successfully retrieved profile data
           content:
             application/json:
-              schema: { $ref: '#/components/schemas/User' }
+              schema: { $ref: '#/components/schemas/Profile' }
         "400": { $ref: '#/components/responses/BadRequest' }
         "404": { $ref: '#/components/responses/NotFound' }
         "500": { $ref: '#/components/responses/InternalServerError' }
 
-  /users/{userId}/stream:
+  /users/{username}/stream:
     parameters:
-      - $ref: '#/components/parameters/userIdParam'
+      - $ref: '#/components/parameters/usernameParam'
     get:
       tags: [ "User" ]
       operationId: getMyStream
@@ -381,16 +357,16 @@ paths:
         "404": { $ref: '#/components/responses/NotFound' }
         "500": { $ref: '#/components/responses/InternalServerError' }
 
-  /users/{userId}/bans:
+  /users/{username}/bans:
     parameters:
-      - $ref: '#/components/parameters/userIdParam'
+      - $ref: '#/components/parameters/usernameParam'
     post:
       tags: [ "Ban" ]
       operationId: banUser
       summary: Ban a user
-      description: Given a user's id, ban them.
+      description: Given a user's username, ban them.
       requestBody:
-        description: The id of the user to ban
+        description: The username of the user to ban
         required: true
         content:
           application/json:
@@ -398,7 +374,7 @@ paths:
               type: object
               description: userId schema
               properties:
-                targetUserId: { $ref: '#/components/schemas/User/properties/userId' }
+                targetUsername: { $ref: '#/components/schemas/User/properties/username' }
       responses:
         "201":
           description: User banned successfully
@@ -410,15 +386,15 @@ paths:
         "404": { $ref: '#/components/responses/NotFound' }
         "500": { $ref: '#/components/responses/InternalServerError' }
 
-  /users/{userId}/bans/{targetUserId}:
+  /users/{username}/bans/{targetUsername}:
     parameters:
-      - $ref: '#/components/parameters/userIdParam'
-      - $ref: '#/components/parameters/targetUserIdParam'
+      - $ref: '#/components/parameters/usernameParam'
+      - $ref: '#/components/parameters/targetUsernameParam'
     delete:
       tags: [ "Ban" ]
       operationId: unbanUser
       summary: Unban a user
-      description: Given a user's id, unban them.
+      description: Given a user's username, unban them.
       responses:
         "204": { $ref: '#/components/responses/NoContent' }
         "400": { $ref: '#/components/responses/BadRequest' }
@@ -426,16 +402,16 @@ paths:
         "404": { $ref: '#/components/responses/NotFound' }
         "500": { $ref: '#/components/responses/InternalServerError' }
 
-  /users/{userId}/follows:
+  /users/{username}/follows:
     parameters:
-      - $ref: '#/components/parameters/userIdParam'
+      - $ref: '#/components/parameters/usernameParam'
     post:
       tags: [ "Follow" ]
       operationId: followUser
       summary: Follow a user
-      description: Given a user's id, follow them.
+      description: Given a user's username, follow them.
       requestBody:
-        description: The userId of the user to follow
+        description: The username of the user to follow
         required: true
         content:
           application/json:
@@ -443,7 +419,7 @@ paths:
               type: object
               description: userId schema
               properties:
-                targetUserId: { $ref: '#/components/schemas/User/properties/userId' }
+                targetUsername: { $ref: '#/components/schemas/User/properties/username' }
       responses:
         "201":
           description: User followed successfully
@@ -455,15 +431,15 @@ paths:
         "404": { $ref: '#/components/responses/NotFound' }
         "500": { $ref: '#/components/responses/InternalServerError' }
 
-  /users/{userId}/follows/{targetUserId}:
+  /users/{username}/follows/{targetUsername}:
     parameters:
-      - $ref: '#/components/parameters/userIdParam'
-      - $ref: '#/components/parameters/targetUserIdParam'
+      - $ref: '#/components/parameters/usernameParam'
+      - $ref: '#/components/parameters/targetUsernameParam'
     delete:
       tags: [ "Follow" ]
       operationId: unfollowUser
       summary: Unfollow a user
-      description: Given a user's id, unfollow them.
+      description: Given a user's username, unfollow them.
       responses:
         "204": { $ref: '#/components/responses/NoContent' }
         "400": { $ref: '#/components/responses/BadRequest' }
@@ -471,9 +447,9 @@ paths:
         "404": { $ref: '#/components/responses/NotFound' }
         "500": { $ref: '#/components/responses/InternalServerError' }
 
-  /users/{userId}/photos:
+  /users/{username}/photos:
     parameters:
-      - $ref: '#/components/parameters/userIdParam'
+      - $ref: '#/components/parameters/usernameParam'
     post:
       tags: [ "Photo" ]
       operationId: uploadPhoto
@@ -507,9 +483,9 @@ paths:
         "404": { $ref: '#/components/responses/NotFound' }
         "500": { $ref: '#/components/responses/InternalServerError' }
 
-  /users/{userId}/photos/{photoId}:
+  /users/{username}/photos/{photoId}:
     parameters:
-      - $ref: '#/components/parameters/userIdParam'
+      - $ref: '#/components/parameters/usernameParam'
       - $ref: '#/components/parameters/photoIdParam'
     delete:
       tags: [ "Photo" ]
@@ -524,25 +500,15 @@ paths:
         "404": { $ref: '#/components/responses/NotFound' }
         "500": { $ref: '#/components/responses/InternalServerError' }
 
-  /users/{userId}/photos/{photoId}/likes:
+  /users/{username}/photos/{photoId}/likes:
     parameters:
-      - $ref: '#/components/parameters/userIdParam'
+      - $ref: '#/components/parameters/usernameParam'
       - $ref: '#/components/parameters/photoIdParam'
     post:
       tags: [ "Like" ]
       operationId: likePhoto
       summary: Like a photo
-      description: Given a user's id, and a photo's id, like it.
-      requestBody:
-        description: The id of the liker
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              description: userId schema
-              properties:
-                targetUserId: { $ref: '#/components/schemas/User/properties/userId' }
+      description: Given a user's username, and a photo's id, like it.
       responses:
         "201":
           description: Photo liked successfully
@@ -554,16 +520,16 @@ paths:
         "404": { $ref: '#/components/responses/NotFound' }
         "500": { $ref: '#/components/responses/InternalServerError' }
 
-  /users/{userId}/photos/{photoId}/likes/{likeId}:
+  /users/{username}/photos/{photoId}/likes/{likeId}:
     parameters:
-      - $ref: '#/components/parameters/userIdParam'
+      - $ref: '#/components/parameters/usernameParam'
       - $ref: '#/components/parameters/photoIdParam'
       - $ref: '#/components/parameters/likeIdParam'
     delete:
       tags: [ "Like" ]
       operationId: unlikePhoto
       summary: Unlike a photo
-      description: Given a user's id and a photo's id, unlike it.
+      description: Given a user's username and a photo's id, unlike it.
       responses:
         "204": { $ref: '#/components/responses/NoContent' }
         "400": { $ref: '#/components/responses/BadRequest' }
@@ -571,16 +537,16 @@ paths:
         "404": { $ref: '#/components/responses/NotFound' }
         "500": { $ref: '#/components/responses/InternalServerError' }
 
-  /users/{userId}/photos/{photoId}/comments:
+  /users/{username}/photos/{photoId}/comments:
     parameters:
-      - $ref: '#/components/parameters/userIdParam'
+      - $ref: '#/components/parameters/usernameParam'
       - $ref: '#/components/parameters/photoIdParam'
     post:
       tags: [ "Comment" ]
       operationId: commentPhoto
       summary: Add a comment to a photo
       description: |-
-        Given the id of a photo from a user (defined by id as well), add a comment to it.
+        Given the id of a photo from a user (defined by username), add a comment to it.
         Multiple comments can be created by the same user.
       requestBody:
         description: The comment content
@@ -603,9 +569,9 @@ paths:
         "404": { $ref: '#/components/responses/NotFound' }
         "500": { $ref: '#/components/responses/InternalServerError' }
 
-  /users/{userId}/photos/{photoId}/comments/{commentId}:
+  /users/{username}/photos/{photoId}/comments/{commentId}:
     parameters:
-      - $ref: '#/components/parameters/userIdParam'
+      - $ref: '#/components/parameters/usernameParam'
       - $ref: '#/components/parameters/photoIdParam'
       - $ref: '#/components/parameters/commentIdParam'
     delete:
